--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <title>Webpack-for-react</title>
+    <title>Calendeok</title>
   </head>
   <body>
     <div id="app"></div>
